# qsculpt

./: .gitignore  AboutQSculpt.md  ArchitectureNotes.md  CMakeLists.txt  Doxyfile  Info.plist  ProjectHome.md  README.md  _clang-format  qsculpt.pro
plastilinacore/: CMakeLists.txt  config.h.in  engine.pro
plastilinacore/PlastilinaCoreIOS/: PlastilinaCoreIOS-Prefix.pch
plastilinacore/include/PlastilinaCore/: BOManager.h  BufferObject.h  Camera.h  Canvas.h  Color.h  Context.h  Context_private.h  Document.h  Face.h  FlatRenderer.h  HEdge.h  ICollection.h  IDevice.h  IDocument.h  IIntegrator.h  IIterator.h  IRenderer.h  ISurface.h  InstanceID.h  Logging.h  Material.h  Mesh.h  Octree.h  OctreeNode.h  PEngineTypes.h  Picking.h  PickingFacesRenderer.h  Plastilina.h  PlastilinaDefs.h  Plastilina_priv.h  Point3D.h  PointRenderer.h  Quad.h  Quadtree.h  RenderState.h  RendererFactory.h  ResourcesManager.h  Scene.h  SceneNode.h  SmoothRenderer.h  (+8 more)
plastilinacore/shaders/: Canvas.cl  Canvas.fs  Canvas.vs  Phong.fs  Phong.vs  Point.fs  Subdivision.cl  WireFrame.fs  WireFrame.vs
plastilinacore/src/: BOManager.cpp  Camera.cpp  Canvas.cpp  Context.cpp  Context_mac.mm  Context_unix.cpp  Context_win32.cpp  Document.cpp  Face.cpp  FlatRenderer.cpp  HEdge.cpp  IDevice.cpp  IIntegrator.cpp  Material.cpp  Mesh.cpp  Octree.cpp  Picking.cpp  PickingFacesRenderer.cpp  Plane.cpp  Plastilina.cpp  PlastilinaOptions.cpp  Plastilina_mac.cpp  Plastilina_win32.cpp  PointRenderer.cpp  Quad.cpp  QuadTree.cpp  RenderState.cpp  RendererFactory.cpp  ResourcesManager.cpp  Scene.cpp  SceneNode.cpp  SmoothRenderer.cpp  SpEnums.cpp  Stable.cpp  StdAfx.cpp  Utilities.cpp  Vertex.cpp  WireframeRenderer.cpp
plastilinacore/src/geometry/: Ray.cpp  Sphere.cpp
plastilinacore/src/material/: PhongMaterial.cpp  PointMaterial.cpp  WireFrameMaterial.cpp
plastilinacore/src/opencl/: CLUtils.cpp  ClStlAllocator.cpp  OCLManager.cpp
plastilinacore/src/opengl/: Context_linux.cpp  Context_mac.cpp  Context_win32.cpp  FrameBufferObject.cpp  GlDevice.cpp  GlException.cpp  GlslProgram.cpp  GlslShader.cpp  Sampler.cpp  Texture.cpp  VertexArrayObject.cpp
plastilinacore/src/physics/: Actor.cpp  ForceFunctors.cpp  SimSystem.cpp
plastilinacore/src/pointcloud/: PointCloud.cpp  PointCloudRenderable.cpp
plastilinacore/src/subdivision/: Box.cpp  GpuSubdivision.cpp  GpuSubdivisionRenderable.cpp  Sphere.cpp  Subdivision.cpp  SubdivisionRenderable.cpp
plastilinacore/src/vulkan/: Context.cpp  VkDevice.cpp  VkUtils.cpp  Vulkan.cpp
qsculpt/: BuildDocs.sh  CMakeLists.txt  Doxyfile  Info.plist  Makefile  doxyfile.config
qsculpt/QSculpt.xcodeproj/: project.pbxproj  rcabral.pbxuser  rcabral.perspectivev3
qsculpt/cmake/Modules/: FindSDL2Image.cmake
qsculpt/docs/html/: _brush_properties_8h_source.html  _color_8h_source.html  _command_base_8h_source.html  _functors_8h_source.html  _gl_view_8h_source.html  _glsl_shader_8h_source.html  _h_edge_8h_source.html  _i_collection_8h_source.html  _i_command_8h_source.html  _i_integrator_8h_source.html  _instance_i_d_8h_source.html  _move_command_8h_source.html  _octree_node_8h_source.html  _p_engine_types_8h_source.html  _plane_8h_source.html  _point3_d_8h_source.html  _point_renderer_8h_source.html  _sp_enums_8h_source.html  _stable_8h_source.html  _surface_view_controller_8h_source.html  annotated.html  class_add_point_command-members.html  class_b_o_manager.html  class_brush_properties-members.html  class_camera.html  class_color-members.html  class_command_manager-members.html  class_config_container.html  class_console_1_1_impl.html  class_console_window.html  class_document-members.html  class_edge_1_1_vertex_iterator-members.html  class_edit_subdivide_command-members.html  class_face_1_1_vertex_iterator-members.html  class_frame_buffer_object.html  class_glsl_program-members.html  class_i_iterator-members.html  class_i_iterator.html  class_i_renderable.html  class_i_renderer.html  (+77 more)
qsculpt/engine/: Makefile  engine.pro
qsculpt/engine/include/: BOManager.h  Box.h  BufferObject.h  Camera.h  Color.h  Face.h  FaceContainer.h  FlatRenderer.h  GlException.h  GlobalDefs.h  GlslProgram.h  GlslShader.h  HEdge.h  ICamera.h  ICollection.h  IDocument.h  IIterator.h  IObject3D.h  Mesh.h  (+45 more)
qsculpt/enginetestapp/: CommandLineApp  Stable.h  main.cpp
qsculpt/include/: Console.h  ConsoleWindow.h  DocumentModel.h  DocumentTreeWidget.h  DocumentView.h  GlView.h  IRenderable.h  ObjectProperties.h  QPlastilinaWindow.h  QSculptApp.h  QSculptWindow.h  Stable.h  SurfaceViewController.h  TransformWidget.h  glitem.h  globalDefs.h
qsculpt/plastilinacore/: CMakeLists.txt  PlastilinaCore-Info.plist
qsculpt/qsculpt/: Makefile  qsculpt.pro
qsculpt/resources/: QSculpt.qrc  solidpaint3d.qrc
qsculpt/src/: Console.cpp  ConsoleWindow.cpp  CustomGLContext.h  CustomGLContext.mm  DocumentModel.cpp  DocumentTreeWidget.cpp  DocumentView.cpp  GlView.cpp  ObjectProperties.cpp  QPlastilinaWindow.cpp  QSculptApp.cpp  QSculptWindow.cpp  Stable.cpp  SurfaceViewController.cpp  TransformWidget.cpp  glitem.cpp
qsculpt/testapp/: CLRender.h  CMakeLists.txt  DocumentModelTest.h  ParticleSystem.h  Render.cl  SDLMain.mm  Sample.fs  Sample.vs  SceneNodeTest.h  SubdivisionTest.h  TestApp.cpp  TestMaterial.h  stable.h  test.cpp
qsculpt/ui/: DocumentTreeWidget.ui  MainWindow.ui  TransformWidget.ui
testapp/: BaseTest.cpp  BaseTest.h  CLRender.cpp  CLRender.h  CMakeLists.txt  CameraTest.h  CanvasTest.cpp  CanvasTest.h  ClStlAllocator.cpp  ClStlAllocator.h  DeviceSelectionTest.h  DocumentModelTest.cpp  DocumentModelTest.h  GpuSubdivision.cpp  GpuSubdivision.h  GpuSubdivisionPrimitives.h  GpuSubdivisionRenderable.cpp  GpuSubdivisionRenderable.h  GpuSubdivision_private.h  IteratorTest.cpp  ParticleSystem.cpp  ParticleSystem.h  PhongMaterial.cpp  PhongMaterial.h  PrimitiveFactory.cpp  PrimitiveFactory.h  Render.cl  SDLMain.h  SDLMain.mm  Sample.vs  SceneNodeTest.h  Subdivision.cl  Subdivision.cpp  Subdivision.h  SubdivisionTest.cpp  SubdivisionTest.h  TestApp-Info.plist  TestApp.cpp  TestApp.h  TestMaterial.cpp  (+5 more)
testapp/shaders/: Sample.fs
(+1518 files in other folders)
